--- a/default.css
+++ b/default.css
@@ -22,8 +22,10 @@ body{
 #code{
     flex: 1;
     width: 50%;
-    background: #f2f2f2;
+    color: yellow;
+    background: #545c64;
     overflow: auto;
+    font-family: Arial, Helvetica, sans-serif
 }
 .preview{
     flex: 1;
