--- a/default.css
+++ b/default.css
@@ -20,7 +20,7 @@ body{
     
 }
 #code{
-    flex: 1;
+    
     width: 50%;
     color: yellow;
     background: #545c64;
@@ -28,7 +28,7 @@ body{
     font-family: Arial, Helvetica, sans-serif
 }
 .preview{
-    flex: 1;
+    
     width: 50%;
     display:flex;
     justify-content:center;
@@ -56,4 +56,18 @@ body{
     background-color: #77C76E;
     border-radius: 50% 50% 50% 50% / 3% 9% 0% 0%;
     z-index: -6;
+}
+@media screen and (max-width:420px){
+    .wrapper{
+        flex-direction: column;
+        height: 100vh;
+    }
+    #code{
+        width: 100%;
+        height: 30vh;
+    }
+    .preview{
+        width: 100%;
+        flex: 1
+    }
 }
