--- a/default.css
+++ b/default.css
@@ -22,8 +22,8 @@ body{
 #code{
     
     width: 50%;
-    color: yellow;
-    background: #545c64;
+    color: #e6a541;
+    background: #2c3643;
     overflow: auto;
     font-family: Arial, Helvetica, sans-serif
 }
@@ -65,6 +65,8 @@ body{
     #code{
         width: 100%;
         height: 30vh;
+        font-size: 14px;
+        overflow-x: hidden;
     }
     .preview{
         width: 100%;
